--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <p>
     <b>Attack on Titan (Japanese: 進撃の巨人, Hepburn: Shingeki no Kyojin, lit. "The Attack Titan")</b> is a Japanese manga series written and illustrated by Hajime Isayama. It is set in a world where humanity lives inside cities surrounded by three enormous walls that protect them from the gigantic man-eating humanoids referred to as Titans; the story follows Eren Yeager, who vows to exterminate the Titans after a Titan brings about the destruction of his hometown and the death of his mother. Attack on Titan was serialized in Kodansha's monthly Bessatsu Shōnen Magazine from September 2009 to April 2021 and has been collected into 33 tankōbon volumes as of January 2021.
 </p>
-<span> <img src="images\aot3.jpg" width="600"height="600"></span><span class="aot2"> <img src="images\aot8.png"width="650"></span>
+    <img src="images\aot3.jpg"><span class="aot2"> <img src="images\aot8.png"width="650"></span>
 <br>
 <br>
 
