--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <head>
+    meta charset ="utf-8"
+    <meta name="viewpoint" content="width:device-width" initial-scale:1
 <title>Attck On Titan</title>
+    
 
 </head>
 <body>
