--- a/seasons.html
+++ b/seasons.html
@@ -34,7 +34,7 @@ Hundreds of years ago, horrifying creatures which resembled humans appeared. The
 
 In the present day, life within the walls has finally found peace, since the residents have not dealt with titans for many years. Eren Yeager, Mikasa Ackerman, and Armin Arlert are three young children who dream of experiencing all that the world has to offer, having grown up hearing stories of the wonders beyond the walls. But when the state of tranquility is suddenly shattered by the attack of a massive 60-meter titan, they quickly learn just how cruel the world can be. On that day, Eren makes a promise to himself that he will do whatever it takes to eradicate every single titan off the face of the Earth, with the hope that one day, humanity will once again be able to live outside the walls without fear.
 <h4>Comment: </h4>
-<input type="text"><button class="sub-btn">SUBMIT</button>
+<textarea name="comments" cols="15" rows="2">Enter your comments here..</textarea><button class="sub-btn">SUBMIT</button>
 </section >
 <hr>
 
@@ -52,7 +52,7 @@ For centuries, humanity has been hunted by giant, mysterious predators known as 
 
 In Shingeki no Kyojin Season 2, Eren Yeager and others of the 104th Training Corps have just begun to become full members of the Survey Corps. As they ready themselves to face the Titans once again, their preparations are interrupted by the invasion of Wall Rose—but all is not as it seems as more mysteries are unraveled. As the Survey Corps races to save the wall, they uncover more about the invading Titans and the dark secrets of their own members.
 <h4>Comment: </h4>
-<input type="text"><button class="sub-btn">SUBMIT</button>
+<textarea name="comments" cols="15" rows="2">Enter your comments here..</textarea><button class="sub-btn">SUBMIT</button>
 </section>
 <hr>
 <section class="section">
@@ -81,7 +81,7 @@ Returning to the tattered Shiganshina District that was once his home, Eren Yeag
 Shingeki no Kyojin Season 3 Part 2 follows Eren as he vows to take back everything that was once his. Alongside him, the Survey Corps strive—through countless sacrifices—to carve a path towards victory and uncover the secrets locked away in the Yeager family's basement.
 </section>
 <h4>Comment: </h4>
-<input type="text"><button class="sub-btn">SUBMIT</button>
+<textarea name="comments" cols="15" rows="2">Enter your comments here..</textarea><button class="sub-btn">SUBMIT</button>
 <hr>
 <section class="section">
     <div class="season-images">
@@ -100,7 +100,7 @@ Gabii Braun and Falco Grice have been training their entire lives to inherit one
             In Shingeki no Kyojin: The Final Season, two utterly different worlds collide as each party pursues its own agenda in the long-awaited conclusion to Paradis' fight for freedom.
 </section>
 <h4>Comment: </h4>
-<input type="text"><button class="sub-btn">SUBMIT</button>
+<textarea name="comments" cols="15" rows="2">Enter your comments here..</textarea><button class="sub-btn">SUBMIT</button>
 <hr>
 </body>
 </html>
